new flask app - new features like field for requests and windows automatic installation

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %} - IA analyzer</title>
+    <title>{% block title %}{% endblock %} - AI analyzer by José San Martin Melio</title>
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,10 +11,10 @@
     
     <style>
         :root {
-            --primary-color: #4a47a3;
-            --secondary-color: #706fd3;
+            --primary-color: #D97059;
+            --secondary-color: #D99789;
             --background-color: #f4f7f9;
-            --container-bg: #ffffff;
+            --container-bg: #F2F2F0;
             --text-color: #333333;
             --border-color: #e0e0e0;
             --font-family: 'Poppins', sans-serif;
